--- a/Kira.tex
+++ b/Kira.tex
@@ -418,8 +418,8 @@
 % received ..."  text while in non-compsoc journals this is reversed. Sigh.
 
 \author{\begin{tabular}{cccc}
-{Zhao~Zhang$^{*,\circ}$} & {Kyle~Barbary$^{\circ,\dagger}$} & {Frank~Austin~Nothaft$^{*,\ddagger}$} & {Evan~Sparks$^*$} \\
-{Oliver~Zahn$^\dagger$} & {Michael~J.~ Franklin$^{*,\circ}$} & {David~A.~Patterson$^{*,\ddagger}$} & {Saul~Perlmutter$^{\circ,\dagger}$}
+{Zhao~Zhang} & {Kyle~Barbary} & {Frank~Austin~Nothaft} & {Evan~Sparks} \\
+{Oliver~Zahn} & {Michael~J.~ Franklin} & {David~A.~Patterson} & {Saul~Perlmutter}
 \end{tabular}% <-this % stops a space
 %\\%\and % use '\and' if you need 'another row' of author names
 %\begin{tabular}{c}
@@ -428,13 +428,15 @@
 %$^\dagger$ Berkeley Center for Cosmological Physics, University of California, Berkeley\\
 %$^\ddagger$ ASPIRE Lab, University of California, Berkeley \\
 %\end{tabular}
-%\IEEEcompsocitemizethanks{\IEEEcompsocthanksitem M. Shell was with the Department
-%of Electrical and Computer Engineering, Georgia Institute of Technology, Atlanta,
-%GA, 30332.\protect\\
+\IEEEcompsocitemizethanks{
+\IEEEcompsocthanksitem Zhao~Zhang and Michael~J.~Franklin are with
+the AMPLab and Berkeley Institute for Data Science, UC Berkeley.\protect
 % note need leading \protect in front of \\ to get a newline within \thanks as
 % \\ is fragile and will error, could use \hfil\break instead.
-%E-mail: see http://www.michaelshell.org/contact.html
-%\IEEEcompsocthanksitem J. Doe and J. Doe are with Anonymous University.}% <-this % stops an unwanted space
+\IEEEcompsocthanksitem Frank~Austin~Nothaft, Evan~Sparks, David~A.~Patterson are with the AMPLab, UC Berkeley
+\IEEEcompsocthanksitem Kyle~Barbary, Oliver~Zahn, and Saul~Perlmutter are with
+Berkeley Institute for Data Science and Berkeley Center for Cosmological Physics, UC Berkeley.
+}% <-this % stops an unwanted space
 %\thanks{Manuscript received April 19, 2005; revised August 26, 2015.}
 }
 
