--- a/Kira.tex
+++ b/Kira.tex
@@ -519,7 +519,7 @@ Our experience with Kira indicates that emerging Big Data platforms such as Apac
 
 % Note that keywords are not normally used for peerreview papers.
 \begin{IEEEkeywords}
-Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
+Distributed Computing, Astronomy, Data Processing
 \end{IEEEkeywords}}
 
 
